StudentManager/.config/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-manager-deployment
  labels:
    app: student-manager
  namespace: student-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-manager-web
  template:
    metadata:
      name: student-manager-webservice
      labels:
        app: student-manager-web
    spec:
      containers:
        - name: student-manager-web
          image: marcinator/student-manager:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      imagePullSecrets:
        - name: github-container-registry
