StudentManager/.config/OldDatabaseDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: student-manager
spec:
  selector:
    app: mssql
  ports:
    - name: mssql-port
      protocol: TCP
      port: 31433
      targetPort: 1443
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql # name of the StatefulSet workload, the SQL Server instance name is derived from this. We suggest to keep this name same as the .spec.template.metadata.labels, .spec.selector.matchLabels and .spec.serviceName to avoid confusion.
  namespace: student-manager
spec:
  serviceName: "mssql-service" # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set.
  replicas: 1 # only one pod, with one SQL Server instance deployed.
  selector:
    matchLabels:
      app: mssql  # this has to be the same as .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: mssql # this has to be the same as .spec.selector.matchLabels, as documented [here](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/):
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: mssql # container name within the pod.
          image: mcr.microsoft.com/mssql/server:2019-latest
          volumeMounts:
            - name: mssqldb
              mountPath: "/var/opt/mssql"
  volumeClaimTemplates:
    - metadata:
        name: mssqldb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
