StudentManager/.config/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Student Manager Service
  namespace: student-manager
spec:
  selector:
    app: student-manager-web-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
