StudentManager/.config/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: OriginIssuer
  name: student-manager-ingress
  namespace: student-manager
spec:
  ingressClassName: traefik
  rules:
    - host: student.marcinator.com
      http:
        paths:
          - backend:
              service:
                name: student-manager-service
                port:
                  number: 80
            path: /
            pathType: Prefix
      https:
        paths:
          - backend:
              service:
                name: student-manager-service
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - student.marcinator.com
      secretName: student-marcinator-tls
